--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -15,17 +15,17 @@
       </h1>
     </header>
     <div class="container__hero" id="hero">
-      <div id="porthole">
-        <canvas id="c"></canvas>
-        <div id="img-div">
-          <img id="image" src="https://www.jpl.nasa.gov/images/universe/CarlSagan_20080903-16.jpg" alt="Carl Sagan">
-          <div class="img-info"></div>
+      <div class="container__porthole" id="porthole">
+        <canvas class="container__canvas" id="c"></canvas>
+        <div class="container__img-div" id="img-div">
+          <img class="container__image" id="image" src="https://www.jpl.nasa.gov/images/universe/CarlSagan_20080903-16.jpg" alt="Carl Sagan">
+          <div class="container__img-info"></div>
         </div>
       </div>
     </div>
     <div class="container__info" id="tribute-info">
-      <div class="quotes">
-        <q>If you wish to make an apple pie from scratch, you must first invent the universe.</q>
+      <div class="container__quotes">
+        <q class="container__quote">If you wish to make an apple pie from scratch, you must first invent the universe.</q>
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu est ut nulla ultricies ultricies quis et purus. Donec et tristique magna, non pulvinar turpis. Integer sodales mattis aliquet. Quisque faucibus et dolor eget luctus. Integer leo risus, efficitur nec facilisis vel, varius fermentum nisl. Etiam commodo eu sem accumsan condimentum. Nulla elementum sollicitudin urna, eget accumsan sem efficitur at. Nunc augue mauris, aliquet nec venenatis vitae, ullamcorper porta lectus. Phasellus a enim id lorem fringilla tincidunt. Nullam tincidunt accumsan congue. Cras interdum ac velit dictum ornare. Nam commodo, magna ut finibus aliquam, quam ex vulputate neque, non elementum nisi velit eget odio.</p>
 
