--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -18,9 +18,11 @@
       <div class="container__porthole" id="porthole">
         <canvas class="container__canvas" id="c"></canvas>
         <div class="container__img-div" id="img-div">
-          <!-- <img class="container__image" id="image" src="https://www.jpl.nasa.gov/images/universe/CarlSagan_20080903-16.jpg" alt="Carl Sagan"> -->
-          <img class="container__image" id="image" src="https://github.com/Art365/fcc-projects/blob/master/Tribute%20Page/images/CarlSagan_20080903-16.jpg?raw=true" alt="Carl Sagan">
-          <div class="container__img-info" id="img-caption"></div>
+          <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan" class="container__image" id="image">
+          <div class="container__img-info" id="img-caption">
+            <p><cite>NASA JPL.</cite></p>
+            <p>Carl Sagan standing in front of planets.</p>
+          </div>
         </div>
       </div>
     </div>
