almost finished the slideshow

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -20,8 +20,9 @@
         <div class="container__img-div" id="img-div">
           <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan" class="container__image" id="image">
           <div class="container__img-info" id="img-caption">
-            <p><cite>NASA JPL.</cite></p>
-            <p>Carl Sagan standing in front of planets.</p>
+            <p><span><cite>NASA JPL.</cite></span></p>
+            <br>
+            <p><span>Carl Sagan standing in front of planets.</span></p>
           </div>
         </div>
       </div>
