almost finished the slideshow

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -18,7 +18,7 @@
       <div class="container__porthole" id="porthole">
         <canvas class="container__canvas" id="c"></canvas>
         <div class="container__img-div" id="img-div">
-          <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan" class="container__image" id="image">
+          <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan standing in front of planets." class="container__image" id="image">
           <div class="container__img-info" id="img-caption">
             <p><span><cite>NASA JPL.</cite></span></p>
             <br>
