almost finished the slideshow

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -19,10 +19,10 @@
         <canvas class="hero__canvas" id="c"></canvas>
         <div class="hero__img-div" id="img-div">
           <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan standing in front of planets." class="hero__image" id="image">
-          <div class="hero__img-info" id="img-caption">
-            <p><cite>NASA JPL.</cite></p>
+          <div class="hero__img-info slide-out" id="img-caption">
+            <p><cite id="hero-citation">NASA JPL.</cite></p>
             <br>
-            <p>Carl Sagan standing in front of planets.</p>
+            <p id="hero-description">Carl Sagan standing in front of planets.</p>
           </div>
         </div>
       </div>
