almost finished the slideshow

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -18,12 +18,18 @@
       <div class="hero__porthole" id="porthole">
         <canvas class="hero__canvas" id="c"></canvas>
         <div class="hero__img-div" id="img-div">
-          <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan standing in front of planets." class="hero__image" id="image">
+
+          <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan standing in front of planets." class="hero__image hero__image--current" id="image">
+          <img srcset="assets/images/planetary_society.jpg 976w, assets/images/planetary_society--large.jpg 1952w" alt="Planetary Society." class="hero__image">
+          <img srcset="assets/images/sagan_with_planets.jpg 572w, assets/images/sagan_with_planets--large.jpg 1144w" alt="Carl Sagan on the set of Cosmos." class="hero__image">
+          <img srcset="assets/images/carl_pioneer.jpg 640w, assets/images/carl_pioneer--large.jpg 1280w" alt="Carl Sagan holding one of the Pioneer plaques." class="hero__image">
+
           <div class="hero__img-info slide-out" id="img-caption">
             <p><cite id="hero-citation">NASA JPL.</cite></p>
             <br>
             <p id="hero-description">Carl Sagan standing in front of planets.</p>
           </div>
+
         </div>
       </div>
     </div>
