finished the slideshow and added a decorative comet to header

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -13,6 +13,7 @@
       <h1 class="header__title" id="title">
         CARL SAGAN
       </h1>
+      <div class="header__comet"></div>
     </header>
     <div class="hero" id="hero">
       <canvas class="hero__canvas" id="c"></canvas>
