--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -33,9 +33,9 @@
       </div>
     </div>
     <div class="info" id="tribute-info">
-      <div class="info__quotes">
-        <q class="info__quote">If you wish to make an apple pie from scratch, you must first invent the universe.</q>
-      </div>
+      <p class="info__quote">
+        <q>If you wish to make an apple pie from scratch, you must first invent the universe.</q>
+      </p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu est ut nulla ultricies ultricies quis et purus. Donec et tristique magna, non pulvinar turpis. Integer sodales mattis aliquet. Quisque faucibus et dolor eget luctus. Integer leo risus, efficitur nec facilisis vel, varius fermentum nisl. Etiam commodo eu sem accumsan condimentum. Nulla elementum sollicitudin urna, eget accumsan sem efficitur at. Nunc augue mauris, aliquet nec venenatis vitae, ullamcorper porta lectus. Phasellus a enim id lorem fringilla tincidunt. Nullam tincidunt accumsan congue. Cras interdum ac velit dictum ornare. Nam commodo, magna ut finibus aliquam, quam ex vulputate neque, non elementum nisi velit eget odio.</p>
 
       <p>Vivamus tempus, augue ac imperdiet imperdiet, nisl leo luctus nisl, at ornare massa velit a tortor. Sed rhoncus tincidunt lorem, eget dictum quam euismod in. Aenean gravida dui a dui molestie varius. Vivamus sed orci est. Praesent eget sollicitudin quam. Suspendisse rhoncus dui ac nunc semper congue. Donec ornare ultricies libero non iaculis. Morbi in risus nisi.</p>
