started on the footer

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -34,14 +34,19 @@
     </div>
     <div class="info" id="tribute-info">
       <p class="info__block info__block--quote">
-        <q>If you wish to make an apple pie from scratch, you must first invent the universe.</q>
+        <q>The nitrogen in our DNA, the calcium in our teeth, the iron in our blood, the carbon in our apple pies were made in the interiors of collapsing stars. We are made of starstuff.</q>
       </p>
       <p class="info__block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu est ut nulla ultricies ultricies quis et purus. Donec et tristique magna, non pulvinar turpis. Integer sodales mattis aliquet. Quisque faucibus et dolor eget luctus. Integer leo risus, efficitur nec facilisis vel, varius fermentum nisl. Etiam commodo eu sem accumsan condimentum. Nulla elementum sollicitudin urna, eget accumsan sem efficitur at. Nunc augue mauris, aliquet nec venenatis vitae, ullamcorper porta lectus. Phasellus a enim id lorem fringilla tincidunt. Nullam tincidunt accumsan congue. Cras interdum ac velit dictum ornare. Nam commodo, magna ut finibus aliquam, quam ex vulputate neque, non elementum nisi velit eget odio.</p>
 
       <p class="info__block">Vivamus tempus, augue ac imperdiet imperdiet, nisl leo luctus nisl, at ornare massa velit a tortor. Sed rhoncus tincidunt lorem, eget dictum quam euismod in. Aenean gravida dui a dui molestie varius. Vivamus sed orci est. Praesent eget sollicitudin quam. Suspendisse rhoncus dui ac nunc semper congue. Donec ornare ultricies libero non iaculis. Morbi in risus nisi.</p>
     </div>
     <div class="footer">
-      <div class="test"></div>
+      <p class="footer__content footer__content--copyright">Copyright &copy; 2019 Artem Petrov</p>
+      <ul class="footer__content footer__content--contact">
+        <li>Github</li>
+        <li>Twitter</li>
+        <li>Email</li>
+      </ul>
     </div>
   </div>
   <script src="app.js"></script>
