--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,31 @@
   <link rel="stylesheet" href="style.css">
   <title>Tribute Page - Carl Sagan</title>
 </head>
+
 <body id="main">
+  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
+    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+      <symbol id="icon-mail4" viewBox="0 0 32 32">
+        <title>mail4</title>
+        <path
+          d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM8 8h16c0.286 0 0.563 0.061 0.817 0.177l-8.817 10.286-8.817-10.287c0.254-0.116 0.531-0.177 0.817-0.177zM6 22v-12c0-0.042 0.002-0.084 0.004-0.125l5.864 6.842-5.8 5.8c-0.045-0.167-0.069-0.34-0.069-0.517zM24 24h-16c-0.177 0-0.35-0.024-0.517-0.069l5.691-5.691 2.826 3.297 2.826-3.297 5.691 5.691c-0.167 0.045-0.34 0.069-0.517 0.069zM26 22c0 0.177-0.024 0.35-0.069 0.517l-5.8-5.8 5.865-6.842c0.003 0.041 0.004 0.083 0.004 0.125v12z">
+        </path>
+      </symbol>
+      <symbol id="icon-twitter" viewBox="0 0 32 32">
+        <title>twitter</title>
+        <path
+          d="M32 7.075c-1.175 0.525-2.444 0.875-3.769 1.031 1.356-0.813 2.394-2.1 2.887-3.631-1.269 0.75-2.675 1.3-4.169 1.594-1.2-1.275-2.906-2.069-4.794-2.069-3.625 0-6.563 2.938-6.563 6.563 0 0.512 0.056 1.012 0.169 1.494-5.456-0.275-10.294-2.888-13.531-6.862-0.563 0.969-0.887 2.1-0.887 3.3 0 2.275 1.156 4.287 2.919 5.463-1.075-0.031-2.087-0.331-2.975-0.819 0 0.025 0 0.056 0 0.081 0 3.181 2.263 5.838 5.269 6.437-0.55 0.15-1.131 0.231-1.731 0.231-0.425 0-0.831-0.044-1.237-0.119 0.838 2.606 3.263 4.506 6.131 4.563-2.25 1.762-5.075 2.813-8.156 2.813-0.531 0-1.050-0.031-1.569-0.094 2.913 1.869 6.362 2.95 10.069 2.95 12.075 0 18.681-10.006 18.681-18.681 0-0.287-0.006-0.569-0.019-0.85 1.281-0.919 2.394-2.075 3.275-3.394z">
+        </path>
+      </symbol>
+      <symbol id="icon-github" viewBox="0 0 32 32">
+        <title>github</title>
+        <path
+          d="M16 0.395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182 0.8 0.148 1.094-0.347 1.094-0.77 0-0.381-0.015-1.642-0.022-2.979-4.452 0.968-5.391-1.888-5.391-1.888-0.728-1.849-1.776-2.341-1.776-2.341-1.452-0.993 0.11-0.973 0.11-0.973 1.606 0.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33 0.143-1.034 0.558-1.74 1.016-2.14-3.554-0.404-7.29-1.777-7.29-7.907 0-1.747 0.625-3.174 1.649-4.295-0.166-0.403-0.714-2.030 0.155-4.234 0 0 1.344-0.43 4.401 1.64 1.276-0.355 2.645-0.532 4.005-0.539 1.359 0.006 2.729 0.184 4.008 0.539 3.054-2.070 4.395-1.64 4.395-1.64 0.871 2.204 0.323 3.831 0.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895 0.574 0.497 1.085 1.47 1.085 2.963 0 2.141-0.019 3.864-0.019 4.391 0 0.426 0.288 0.925 1.099 0.768 6.354-2.118 10.933-8.113 10.933-15.18 0-8.837-7.164-16-16-16z">
+        </path>
+      </symbol>
+    </defs>
+  </svg>
   <div class="container">
     <header class="header">
       <h1 class="header__title" id="title">
@@ -19,10 +44,15 @@
       <canvas class="hero__canvas" id="c"></canvas>
       <div class="hero__img-div" id="img-div">
 
-        <img srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w" alt="Carl Sagan standing in front of planets." class="hero__image hero__image--current" id="image">
-        <img srcset="assets/images/planetary_society.jpg 976w, assets/images/planetary_society--large.jpg 1952w" alt="Planetary Society." class="hero__image">
-        <img srcset="assets/images/sagan_with_planets.jpg 572w, assets/images/sagan_with_planets--large.jpg 1144w" alt="Carl Sagan on the set of Cosmos." class="hero__image">
-        <img srcset="assets/images/carl_pioneer.jpg 640w, assets/images/carl_pioneer--large.jpg 1280w" alt="Carl Sagan holding one of the Pioneer plaques." class="hero__image">
+        <img
+          srcset="assets/images/sagan_in_front_of_planets.jpg 600w, assets/images/sagan_in_front_of_planets--large.jpg 1200w"
+          alt="Carl Sagan standing in front of planets." class="hero__image hero__image--current" id="image">
+        <img srcset="assets/images/planetary_society.jpg 976w, assets/images/planetary_society--large.jpg 1952w"
+          alt="Planetary Society." class="hero__image">
+        <img srcset="assets/images/sagan_with_planets.jpg 572w, assets/images/sagan_with_planets--large.jpg 1144w"
+          alt="Carl Sagan on the set of Cosmos." class="hero__image">
+        <img srcset="assets/images/carl_pioneer.jpg 640w, assets/images/carl_pioneer--large.jpg 1280w"
+          alt="Carl Sagan holding one of the Pioneer plaques." class="hero__image">
 
         <div class="hero__img-info slide-out" id="img-caption">
           <p><cite id="hero-citation">NASA JPL.</cite></p>
@@ -34,21 +64,50 @@
     </div>
     <div class="info" id="tribute-info">
       <p class="info__block info__block--quote">
-        <q>The nitrogen in our DNA, the calcium in our teeth, the iron in our blood, the carbon in our apple pies were made in the interiors of collapsing stars. We are made of starstuff.</q>
+        <q>The nitrogen in our DNA, the calcium in our teeth, the iron in our blood, the carbon in our apple pies were
+          made in the interiors of collapsing stars. We are made of starstuff.</q>
       </p>
-      <p class="info__block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu est ut nulla ultricies ultricies quis et purus. Donec et tristique magna, non pulvinar turpis. Integer sodales mattis aliquet. Quisque faucibus et dolor eget luctus. Integer leo risus, efficitur nec facilisis vel, varius fermentum nisl. Etiam commodo eu sem accumsan condimentum. Nulla elementum sollicitudin urna, eget accumsan sem efficitur at. Nunc augue mauris, aliquet nec venenatis vitae, ullamcorper porta lectus. Phasellus a enim id lorem fringilla tincidunt. Nullam tincidunt accumsan congue. Cras interdum ac velit dictum ornare. Nam commodo, magna ut finibus aliquam, quam ex vulputate neque, non elementum nisi velit eget odio.</p>
+      <p class="info__block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu est ut nulla ultricies
+        ultricies quis et purus. Donec et tristique magna, non pulvinar turpis. Integer sodales mattis aliquet. Quisque
+        faucibus et dolor eget luctus. Integer leo risus, efficitur nec facilisis vel, varius fermentum nisl. Etiam
+        commodo eu sem accumsan condimentum. Nulla elementum sollicitudin urna, eget accumsan sem efficitur at. Nunc
+        augue mauris, aliquet nec venenatis vitae, ullamcorper porta lectus. Phasellus a enim id lorem fringilla
+        tincidunt. Nullam tincidunt accumsan congue. Cras interdum ac velit dictum ornare. Nam commodo, magna ut finibus
+        aliquam, quam ex vulputate neque, non elementum nisi velit eget odio.</p>
 
-      <p class="info__block">Vivamus tempus, augue ac imperdiet imperdiet, nisl leo luctus nisl, at ornare massa velit a tortor. Sed rhoncus tincidunt lorem, eget dictum quam euismod in. Aenean gravida dui a dui molestie varius. Vivamus sed orci est. Praesent eget sollicitudin quam. Suspendisse rhoncus dui ac nunc semper congue. Donec ornare ultricies libero non iaculis. Morbi in risus nisi.</p>
+      <p class="info__block">Vivamus tempus, augue ac imperdiet imperdiet, nisl leo luctus nisl, at ornare massa velit a
+        tortor. Sed rhoncus tincidunt lorem, eget dictum quam euismod in. Aenean gravida dui a dui molestie varius.
+        Vivamus sed orci est. Praesent eget sollicitudin quam. Suspendisse rhoncus dui ac nunc semper congue. Donec
+        ornare ultricies libero non iaculis. Morbi in risus nisi.</p>
     </div>
     <div class="footer">
       <p class="footer__content footer__content--copyright">Copyright &copy; 2019 Artem Petrov</p>
       <ul class="footer__content footer__content--contact">
-        <li>Github</li>
-        <li>Twitter</li>
-        <li>Email</li>
+        <li>
+          <a href="https://github.com/webrayn" target="_blank">
+            <svg class="icon icon-github">
+              <use xlink:href="#icon-github"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/webrayn" target="_blank">
+            <svg class="icon icon-twitter">
+              <use xlink:href="#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:#" target="_blank">
+            <svg class="icon icon-mail4">
+              <use xlink:href="#icon-mail4"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
   <script src="app.js"></script>
 </body>
+
 </html>
