--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -64,32 +64,61 @@
       </div>
     </div>
     <div class="info" id="tribute-info">
-      <p class="info__block info__block--quote">
-        <q>The nitrogen in our DNA, the calcium in our teeth, the iron in our blood, the carbon in our apple pies were
+      <p class="info__block info__block--wide">
+        <q class="info__quote">The nitrogen in our DNA, the calcium in our teeth, the iron in our blood, the carbon in our apple pies were
           made in the interiors of collapsing stars. We are made of starstuff.</q>
+          <br>
+          <strong>― Carl Sagan, Cosmos</strong>
       </p>
-      <p class="info__block">Carl Edward Sagan was an American astronomer, cosmologist, astrophysicist, astrobiologist, author, science popularizer, and science communicator. Sagan published over 600 scientific papers and articles and was an author or contributor of more than 20 books. Some of his best-known books include Cosmos, The Demon-Haunted World, The Dragons of Eden, and Pale Blue Dot. Sagan also co-wrote and narrated the award-winning 1980 television series Cosmos: A Personal Voyage, which is the most widely watched series in the history of American public television. Sagan advocated scientific skeptical inquiry and the scientific method, pioneered exobiology and promoted the Search for Extra-Terrestrial Intelligence (SETI).</p>
+      <p class="info__block">Carl Edward Sagan was an American astronomer, cosmologist, astrophysicist, astrobiologist,
+        author, science popularizer, and science communicator. Sagan published over 600 scientific papers and articles
+        and was an author or contributor of more than 20 books. Some of his best-known books include <cite>Cosmos</cite>, <cite>The
+        Demon-Haunted World</cite>, <cite>The Dragons of Eden</cite>, and <cite>Pale Blue Dot</cite>. Sagan also co-wrote and narrated the award-winning
+        1980 television series <cite>Cosmos: A Personal Voyage</cite>, which is the most widely watched series in the history of
+        American public television. Sagan advocated scientific skeptical inquiry and the scientific method, pioneered
+        exobiology and promoted the Search for Extra-Terrestrial Intelligence (SETI).</p>
 
       <div class="info__block">
         <img
-        srcset="assets/images/sounds_of_earth.jpg 500w, assets/images/sounds_of_earth--medium.jpg 1000w, assets/images/sounds_of_earth--large.jpg 1500w"
-        alt="The Sounds of Earth golden record." class="info__image">
+          srcset="assets/images/sounds_of_earth.jpg 500w, assets/images/sounds_of_earth--medium.jpg 1000w, assets/images/sounds_of_earth--large.jpg 1500w"
+          alt="The Sounds of Earth golden record." class="info__image">
         <p class="info__citation">Source: NASA JPL. <cite><i>The Sounds of Earth</i></cite></p>
-        <p>The golden record shown above was assembled by Sagan and was later launched into space aboard the Voyager spacecraft. It contains greetings in 60 languages, samples of music from different cultures and eras, and natural and man-made sounds from Earth; messages that could potentially be understood by intelligent extraterrestrials should they ever find them.</p>
+        <p>The golden record shown above was assembled by Sagan and was later launched into space aboard the Voyager
+          spacecraft. It contains greetings in 60 languages, samples of music from different cultures and eras, and
+          natural and man-made sounds from Earth; messages that could potentially be understood by intelligent
+          extraterrestrials should they ever find them.</p>
       </div>
 
       <div class="info__block">
+        <img src="assets/images/pale_blue_dot.jpg" alt="Pale Blue Dot" class="info__image">
+        <p class="info__citation">Source: NASA JPL. <cite><i>Pale Blue Dot</i></cite></p>
+        <p>Photo of Earth taken by the Voyager 1 spacecraft, at Sagan's request, from a distance of more than 4 billion miles. The Earth is
+          the tiny dot approximately halfway down the ray of light on the right.</p>
+      </div>
 
-          <p class="info__citation">Source: NASA JPL. <cite><i>Pale Blue Dot</i></cite></p>
-          <p>Photo of Earth taken by the Voyager 1 spacecraft, from a distance of more than 4 billion miles. The Earth is the tiny dot approximately halfway down the ray of light on the right.</p>
-        </div>
+      <div class="info__block"><p>Sagan wrote of this photo in his <cite>Pale Blue Dot</cite> book: </p>
+        <br>
+        <blockquote>"Look again at that dot. That's here.
+        That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human
+        being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident
+        religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator
+        and destroyer of civilization, every king and peasant, every young couple in love, every mother and father,
+        hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar,"
+        every "supreme leader," every saint and sinner in the history of our species lived there-on a mote of dust
+        suspended in a sunbeam. ... There is perhaps no better demonstration of the folly of human conceits than this
+        distant image of our tiny world. To me, it underscores our responsibility to deal more kindly with one another,
+        and to preserve and cherish the pale blue dot, the only home we've ever known."</blockquote></div>
+
+      <p class="info__block info__block--wide">
+        If you'd like to learn more about this incredible man, check out his <a href="https://en.wikipedia.org/wiki/Carl_Sagan" target="_blank">Wikipedia entry</a>.
+      </p>
 
     </div>
     <div class="footer">
       <p class="footer__content footer__content--copyright">Copyright &copy; 2019 Artem Petrov</p>
       <ul class="footer__content footer__content--contact">
         <li>
-          <a href="https://github.com/webrayn" target="_blank">
+          <a id="tribute-link" href="https://github.com/webrayn" target="_blank">
             <svg class="icon icon-github">
               <use xlink:href="#icon-github"></use>
             </svg>
