made the cards slightly wider and added min-width to them

--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -92,7 +92,7 @@
       <div class="info__block">
         <img src="assets/images/pale_blue_dot.jpg" alt="Pale Blue Dot" class="info__image">
         <p class="info__citation">Source: NASA JPL. <cite><i>Pale Blue Dot</i></cite></p>
-        <p>Photo of Earth taken by the Voyager 1 spacecraft, at Sagan's request, from a distance of more than 4 billion miles. The Earth is
+        <p>Photo of Earth taken by the Voyager 1 spacecraft, from a distance of more than 4 billion miles, at Sagan's request. The Earth is
           the tiny dot approximately halfway down the ray of light on the right.</p>
       </div>
 
